<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HitungMineral"
    android:gravity="center"
    android:padding="3dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/lengkung"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:gravity="center"
            android:text="Data mineral"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/jumlahbbmineral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/layout_margin_horizontal"
            android:hint="Berat badan"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
             />

        <EditText
            android:id="@+id/kadar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_horizontal"
            android:layout_marginTop="@dimen/layout_margin_vertical"
            android:layout_marginRight="@dimen/layout_margin_horizontal"
            android:hint="Jumlah air diminum(ml)"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
             />


        <TextView
            android:id="@+id/hasilmineral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/layout_margin_vertical"

            android:layout_marginBottom="25dp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnhitung"
        android:textStyle="bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:text="Hitung"
        android:textColor="@color/white"
        android:background="@drawable/lengkung">

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_notif"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:text="Ingatkan untuk minum 15 menit kedepan"
        android:textColor="@color/white"
        android:background="@drawable/lengkung">
    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>